--- a/demo-ui/conf/application.conf
+++ b/demo-ui/conf/application.conf
@@ -25,11 +25,11 @@ demoui {
  // gatewayURL = "https://10.50.14.22:9443"
   apiURL{
  // change to host = "http://localhost" to run against local API
-    host = "https://addressindex-api-dev.eu-gb.mybluemix.net"
-    host =  ${?ONS_AI_UI_API_URI}
+    host = "https://addressindex-api-dev-2.eu-gb.mybluemix.net"
+    //host =  ${?ONS_AI_UI_API_URI}
  // change to port = 9001 to run against local API
     port = 443
-    port =  ${?ONS_AI_UI_API_PORT}
+    //port =  ${?ONS_AI_UI_API_PORT}
   }
   limit = 10
   offset = 0
